--- a/src/components/common/ProfileModal/ProfileModal.css
+++ b/src/components/common/ProfileModal/ProfileModal.css
@@ -5,7 +5,7 @@
   display: grid;
   place-items: center;
   padding: 24px;
-  z-index: 300;
+  z-index: 250;
 }
 
 .profile-modal {
